# A12_Compiler

CompilerA12/CompilerA12/codeA12/: Compilers.c  MainReader.c  Reader.c  Reader.h  launch.vs.json
CompilerA12/CompilerA12/inputA12/: A12.bat  INPUT2_Volume.mld  INPUT3_Factorial.mld
CompilerA12/codeA12/: CMakeLists.txt  Compilers.c  Compilers.h  MainReader.c  Reader.c  Reader.h
CompilerA12/inputA12/: INPUT4_Datatypes.mld  INPUT5_General.mld  INPUT6_Err1Reader.mld  INPUT9_Big.mld  README.txt
CompilerA22/codeA12/: CMakeLists.txt  Compilers.c  Compilers.h  MainReader.c  MainScanner.c  Reader.c  Reader.h  Scanner.c  Scanner.h
CompilerA22/inputA12/: A12.bat  A22.bat  C.bat
